--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,8 @@ USER webapp
 WORKDIR /var/lib/webapp
 RUN mkdir bin
 ENV PATH /var/lib/webapp/bin:$PATH
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
 
 ADD ctgov-import-0.1.0-standalone.jar .
 
